@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-src/README.UPDATING,v 1.8 2005/09/14 13:20:12 ph10 Exp $
+$Cambridge: exim/exim-src/README.UPDATING,v 1.9 2005/10/03 13:25:32 ph10 Exp $
 
 This document contains detailed information about incompatibilities that might
 be encountered when upgrading from one release of Exim to another. The
@@ -26,6 +26,15 @@ there have been two big upheavals...
 
 The rest of this document contains information about changes in 4.xx releases
 that might affect a running system.
+
+
+Exim version 4.54
+-----------------
+
+There was a problem with 4.52/TF/02 in that a "name=" option on control=
+submission terminated at the next slash, thereby not allowing for slashes in
+the name. This has been changed so that "name=" takes the rest of the string as
+its data. It must therefore be the last option.
 
 
 Version 4.53
